# MCFBlock

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  TODO  conanfile.py  makefile  makefile-c  makefile-s
cmake/: MCFBlockConfig.cmake.in
include/: MCFBlock.h  MCFSolver.h
src/: MCFBlock.cpp  MCFSolver.cpp
test/: CMakeLists.txt  batch  batch-l  makefile  test.cpp
test_package/: CMakeLists.txt  conanfile.py  ex0.dmx  main.cpp
tools/: CMakeLists.txt  batch  dmx2nc4.cpp  makefile
